Fixed time alignment

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -124,6 +124,7 @@ p {
             color: rgba(256, 256, 256, 0.6);
             font-weight: 500;
             margin-bottom: 0px;
+            text-align: right;
         }
     }
     .languages-container {
@@ -193,6 +194,7 @@ p {
         top: 0;
         color: $text-grey;
         font-size: 12px;
+        text-align: right;
     }
     .company {
         margin-bottom: 10px;
